RCB3_Interface/RCB3_Interface.h

//RedVersion Port configuration
RCB_EXPORT bool SetRedVersionConfiguration(UINT in_rcb3,UINT in_portNumber,UBYTE in_backup,const UBYTE *in_stretch/*3*/,
                                           const UBYTE *in_speed/*3*/,UINT in_pulsePunch,UINT in_deadBand,UINT in_damping,
                                           UINT in_protectionTime, UINT in_reverse, 
                                           UINT in_lowerPositionLimit,UINT in_upperPositionLimit,
                                           UINT in_freeTime);
RCB_EXPORT bool GetRedVersionConfiguration(UINT in_rcb3,UINT in_portNumber,UBYTE &out_backup,UBYTE *out_stretch/*3*/,
                                           UBYTE *out_speed/*3*/,UINT &out_pulsePunch,UINT &out_deadBand,UINT &out_damping,
                                           UINT &out_protectionTime, UINT &out_reverse, 
                                           UINT &out_lowerPositionLimit,UINT &out_upperPositionLimit,
                                           UINT &out_freeTime);
//Serial Servo Port configuration

RCB_EXPORT bool SetSerialServoConfiguration(UINT in_rcb3,UINT in_portNumber,UBYTE in_backup,const UBYTE *in_stretch/*3*/,
                                           const UBYTE *in_speed/*3*/,UINT in_pulsePunch,UINT in_deadBand,
                                           UINT in_damping,UINT in_protectionTime, UINT in_reverse, 
                                           UINT in_lowerPositionLimit,UINT in_upperPositionLimit,
                                           UINT in_freeTime,UINT in_stretchSIO,UINT in_speedSIO,
                                           UINT in_offset,UINT in_ID, UINT in_p1,UINT in_p2, UINT in_n1, UINT in_n2);
RCB_EXPORT bool GetSerialServoConfiguration(UINT in_rcb3,UINT in_portNumber,UBYTE &out_backup,UBYTE *out_stretch/*3*/,
                                           UBYTE *out_speed/*3*/,UINT &out_pulsePunch,UINT &out_deadBand,
                                           UINT &out_damping,UINT &out_protectionTime, UINT &out_reverse, 
                                           UINT &out_lowerPositionLimit,UINT &out_upperPositionLimit,
                                           UINT &out_freeTime,UINT &out_stretchSIO,UINT &out_speedSIO,
                                           UINT &out_offset,UINT &out_ID, UINT &out_p1,UINT &out_p2, UINT &out_n1, UINT &out_n2);
RCB_EXPORT bool GetSerialServoStretch(UINT in_rcb3,UINT *out_stretch/*24*/);
RCB_EXPORT bool GetSerialServoSpeed(UINT in_rcb3,UINT *out_speed/*24*/);
//PDS Servo Port configuration
RCB_EXPORT bool SetPDSConfiguration(UINT in_rcb3,UINT in_portNumber,UBYTE in_backup,UINT in_stretch,
                                   UINT in_speed,UINT in_pulsePunch,UINT in_deadBand,UINT in_damping,
                                   UINT in_failSafeTime,
                                   UINT in_lowerPositionLimit,UINT in_upperPositionLimit
                                   );
RCB_EXPORT bool GetPDSConfiguration(UINT in_rcb3,UINT in_portNumber,UBYTE &out_backup,UINT &out_stretch,
                                   UINT &out_speed,UINT &out_pulsePunch,UINT &out_deadBand,UINT &out_damping,
                                   UINT &out_failSafeTime,
                                   UINT &out_lowerPositionLimit,UINT &out_upperPositionLimit
                                   );
RCB_EXPORT bool SetPDSPortsInUse(UINT in_rcb3,UINT in_pdsPortsInUse,UINT in_option);
RCB_EXPORT bool GetPDSPortsInUse(UINT in_rcb3,UINT &out_pdsPortsInUse);
//Default Port Position
RCB_EXPORT bool SetPortsDefaultPosition(UINT in_rcb3,const UINT *in_defaultPositions/*24*/);
RCB_EXPORT bool GetPortsDefaultPosition(UINT in_rcb3,UINT *out_defaultPositions/*24*/);
//Port Names
RCB_EXPORT bool SetPortName(UINT in_rcb3,UINT in_option,UINT in_portIndex,const char *in_name);
RCB_EXPORT bool GetPortName(UINT in_rcb3,UINT in_portIndex,char *out_name /*32*/);
//Motion/Scenario Edition
RCB_EXPORT bool SetMotionScenarioData(UINT in_rcb3,UINT in_option,UINT in_motionScenarioIndex,UINT in_moveCount,UINT in_portsUsed, 
                                      UINT in_minute,UINT in_hour,UINT in_day,UINT in_month,
                                      UINT in_button,const char *in_name /*32 max*/);
RCB_EXPORT bool GetMotionScenarioData(UINT in_rcb3,UINT in_motionScenarioIndex,
                                      UINT &out_moveCount,
                                      UINT &out_portsUsed, 
                                      UINT &out_minute,UINT &out_hour,UINT &out_day,UINT &out_month,
                                      UINT &out_button,char *out_name /*32 max*/);
//Timer based Notification (0.5s) when activated in the Software Switches.
RCB_EXPORT bool GetLastDataFromRemoteControl(UINT in_rcb3,char *out_remoteData /*7*/);
RCB_EXPORT bool GetLastPortsStatus(UINT in_rcb3,UINT &out_portsDone,UINT *out_portMotionDone/*24*/);
RCB_EXPORT bool GetLastPowerAndADValues(UINT in_rcb3,float &out_power,float &out_ad1,float &out_ad2,float &out_ad3);
/////////////////////////
//Serial  Extension
/////////////////////////
RCB_EXPORT bool SendBytesToCOMPort(UINT in_rcb3,const char *in_buffer,UINT in_buffer_size,int in_which_controler);
RCB_EXPORT bool ReceiveBytesFromCOMPort(UINT in_rcb3,char *out_buffer,UINT in_buffer_size);