RCB3Interface.vb


'RedVersion Port configuration
Public Declare Function SetRedVersionConfiguration Lib "RCB3_Interface.dll" Alias "SetRedVersionConfiguration" (ByVal in_rcb3 As UInteger, ByVal in_portNumber As UInteger, ByVal in_backup As Byte, ByVal in_stretch() As Byte, ByVal in_speed() As Byte, ByVal in_pulsePunch As UInteger, ByVal in_deadBand As UInteger, ByVal in_damping As UInteger, ByVal in_protectionTime As UInteger, ByVal in_reverse As UInteger, ByVal in_lowerPositionLimit As UInteger, ByVal in_upperPositionLimit As UInteger, ByVal in_freeTime As UInteger) As Boolean 'arrays size = 3
Public Declare Function GetRedVersionConfiguration Lib "RCB3_Interface.dll" Alias "GetRedVersionConfiguration" (ByVal in_rcb3 As UInteger, ByVal in_portNumber As UInteger, ByRef out_backup As Byte, ByVal out_stretch() As Byte, ByVal out_speed() As Byte, ByRef out_pulsePunch As UInteger, ByRef out_deadBand As UInteger, ByRef out_damping As UInteger, ByRef out_protectionTime As UInteger, ByRef out_reverse As UInteger, ByRef out_lowerPositionLimit As UInteger, ByRef out_upperPositionLimit As UInteger, ByRef out_freeTime As UInteger) As Boolean 'arrays size = 3

'Serial Servo Port configuration

Public Declare Function SetSerialServoConfiguration Lib "RCB3_Interface.dll" Alias "SetSerialServoConfiguration" (ByVal in_rcb3 As UInteger, ByVal in_portNumber As UInteger, ByVal in_backup As Byte, ByVal in_stretch() As Byte, ByVal in_speed() As Byte, ByVal in_pulsePunch As UInteger, ByVal in_deadBand As UInteger, ByVal in_damping As UInteger, ByVal in_protectionTime As UInteger, ByVal in_reverse As UInteger, ByVal in_lowerPositionLimit As UInteger, ByVal in_upperPositionLimit As UInteger, ByVal in_freeTime As UInteger, ByVal in_stretchSIO As UInteger, ByVal in_speedSIO As UInteger, ByVal in_offset As UInteger, ByVal in_ID As UInteger, ByVal in_p1 As UInteger, ByVal in_p2 As UInteger, ByVal in_n1 As UInteger, ByVal in_n2 As UInteger) As Boolean 'arrays size = 3
Public Declare Function GetSerialServoConfiguration Lib "RCB3_Interface.dll" Alias "GetSerialServoConfiguration" (ByVal in_rcb3 As UInteger, ByVal in_portNumber As UInteger, ByRef out_backup As Byte, ByVal out_stretch() As Byte, ByVal out_speed() As Byte, ByRef out_pulsePunch As UInteger, ByRef out_deadBand As UInteger, ByRef out_damping As UInteger, ByRef out_protectionTime As UInteger, ByRef out_reverse As UInteger, ByRef out_lowerPositionLimit As UInteger, ByRef out_upperPositionLimit As UInteger, ByRef out_freeTime As UInteger, ByRef out_stretchSIO As UInteger, ByRef out_speedSIO As UInteger, ByRef out_offset As UInteger, ByRef out_ID As UInteger, ByRef out_p1 As UInteger, ByRef out_p2 As UInteger, ByRef out_n1 As UInteger, ByRef out_n2 As UInteger) As Boolean 'arrays size = 3

Public Declare Function GetSerialServoStretch Lib "RCB3_Interface.dll" Alias "GetSerialServoStretch" (ByVal in_rcb3 As UInteger, ByVal out_stretch() As UInteger) As Boolean 'out_stretch size = 24
Public Declare Function GetSerialServoSpeed Lib "RCB3_Interface.dll" Alias "GetSerialServoSpeed" (ByVal in_rcb3 As UInteger, ByVal out_speed() As UInteger) As Boolean 'out_speed size = 24


'PDS Servo Port configuration
Public Declare Function SetPDSConfiguration Lib "RCB3_Interface.dll" Alias "SetPDSConfiguration" (ByVal in_rcb3 As UInteger, ByVal in_portNumber As UInteger, ByVal in_backup As Byte, ByVal in_stretch As UInteger, ByVal in_speed As UInteger, ByVal in_pulsePunch As UInteger, ByVal in_deadBand As UInteger, ByVal in_damping As UInteger, ByVal in_failSafeTime As UInteger, ByVal in_lowerPositionLimit As UInteger, ByVal in_upperPositionLimit As UInteger) As Boolean
Public Declare Function GetPDSConfiguration Lib "RCB3_Interface.dll" Alias "GetPDSConfiguration" (ByVal in_rcb3 As UInteger, ByVal in_portNumber As UInteger, ByRef out_backup As Byte, ByRef out_stretch As UInteger, ByRef out_speed As UInteger, ByRef out_pulsePunch As UInteger, ByRef out_deadBand As UInteger, ByRef out_damping As UInteger, ByRef out_failSafeTime As UInteger, ByRef out_lowerPositionLimit As UInteger, ByRef out_upperPositionLimit As UInteger) As Boolean

Public Declare Function SetPDSPortsInUse Lib "RCB3_Interface.dll" Alias "SetPDSPortsInUse" (ByVal in_rcb3 As UInteger, ByVal in_pdsPortsInUse As UInteger, ByVal in_option As UInteger) As Boolean
Public Declare Function GetPDSPortsInUse Lib "RCB3_Interface.dll" Alias "GetPDSPortsInUse" (ByVal in_rcb3 As UInteger, ByRef out_pdsPortsInUse As UInteger) As Boolean


'Default Port Position
Public Declare Function SetPortsDefaultPosition Lib "RCB3_Interface.dll" Alias "SetPortsDefaultPosition" (ByVal in_rcb3 As UInteger, ByVal in_defaultPositions() As UInteger) As Boolean 'in_defaultPositions size = 24
Public Declare Function GetPortsDefaultPosition Lib "RCB3_Interface.dll" Alias "GetPortsDefaultPosition" (ByVal in_rcb3 As UInteger, ByVal out_defaultPositions() As UInteger) As Boolean 'out_defaultPositions size = 24

'Port Names
Public Declare Function SetPortName Lib "RCB3_Interface.dll" Alias "SetPortName" (ByVal in_rcb3 As UInteger, ByVal in_option As UInteger, ByVal in_portIndex As UInteger, ByVal in_name() As Byte) As Boolean 'name size = 32
Public Declare Function GetPortName Lib "RCB3_Interface.dll" Alias "GetPortName" (ByVal in_rcb3 As UInteger, ByVal in_portIndex As UInteger, ByVal out_name() As Byte) As Boolean 'name size = 32


'Motion/Scenario Edition
Public Declare Function SetMotionScenarioData Lib "RCB3_Interface.dll" Alias "SetMotionScenarioData" (ByVal in_rcb3 As UInteger, ByVal in_option As UInteger, ByVal in_motionScenarioIndex As UInteger, ByVal in_moveCount As UInteger, ByVal in_portsUsed As UInteger, ByVal in_minute As UInteger, ByVal in_hour As UInteger, ByVal in_day As UInteger, ByVal in_month As UInteger, ByVal in_button As UInteger, ByVal in_name() As Byte) As Boolean 'name size = 32
Public Declare Function GetMotionScenarioData Lib "RCB3_Interface.dll" Alias "GetMotionScenarioData" (ByVal in_rcb3 As UInteger, ByVal in_motionScenarioIndex As UInteger, ByRef out_moveCount As UInteger, ByRef out_portsUsed As UInteger, ByRef out_minute As UInteger, ByRef out_hour As UInteger, ByRef out_day As UInteger, ByRef out_month As UInteger, ByRef out_button As UInteger, ByVal out_name() As Byte) As Boolean 'name size = 32

'Timer based Notification (0.5s) when activated in the Software Switches.
Public Declare Function GetLastDataFromRemoteControl Lib "RCB3_Interface.dll" Alias "GetLastDataFromRemoteControl" (ByVal in_rcb3 As UInteger, ByVal out_remoteData() As Byte) As Boolean 'out_remoteData size = 7
Public Declare Function GetLastPortsStatus Lib "RCB3_Interface.dll" Alias "GetLastPortsStatus" (ByVal in_rcb3 As UInteger, ByRef out_portsDone As UInteger, ByVal out_portMotionDone() As UInteger) As Boolean 'out_portMotionDone size = 24
Public Declare Function GetLastPowerAndADValues Lib "RCB3_Interface.dll" Alias "GetLastPowerAndADValues" (ByVal in_rcb3 As UInteger, ByRef out_power As Single, ByRef out_ad1 As Single, ByRef out_ad2 As Single, ByRef out_ad3 As Single) As Boolean

'Serial  Extension
Public Declare Function SendBytesToCOMPort Lib "RCB3_Interface.dll" Alias "SendBytesToCOMPort" (ByVal in_rcb3 As UInteger, ByVal in_buffer_to_send() As Byte, ByVal in_buffer_size As UInteger) As Boolean
Public Declare Function ReceiveBytesFromCOMPort Lib "RCB3_Interface.dll" Alias "ReceiveBytesFromCOMPort" (ByVal in_rcb3 As UInteger, ByVal out_buffer_to_send() As Byte, ByVal in_buffer_size As UInteger) As Boolean
